--- a/style/protfolio.css
+++ b/style/protfolio.css
@@ -92,3 +92,11 @@ main{
     margin: 0 auto;
     margin-top: 130px;
 }
+.about-items{
+    display: flex;
+    justify-content: space-around;
+}
+.item-description{
+    font-size: 20px;
+    font-weight: bold;
+}
