--- a/style/protfolio.css
+++ b/style/protfolio.css
@@ -7,6 +7,9 @@
   font-variation-settings:
     "wdth" 100;
 }
+.text-center{
+    text-align: center;
+}
 .header{
     background-image: url(../images/developer.png),url(../images/header_bg.png);
     background-repeat: no-repeat;
@@ -99,4 +102,17 @@ main{
 .item-description{
     font-size: 20px;
     font-weight: bold;
+}
+main section{
+     margin-top: 130px;
+     margin-bottom: 130px;
+}
+.skills-container{
+    display: flex;
+    padding-top: 100px;
+    gap: 24px; 
+}
+.skill{
+    padding: 30px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
